--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
 {
-  "author": "Ayfri",
-  "bugs": {
-    "url": "https://github.com/Ayfri/portal-2d/issues"
-  },
-  "dependencies": {
-    "pixi.js": "^5.3.7"
-  },
-  "description": "A portal game made in TypeScript using PIXI.",
-  "devDependencies": {
-    "@types/node": "^14.14.21",
-    "@types/pixi.js": "^5.0.0",
-    "esbuild": "^0.8.32",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "gulp-esbuild": "^0.3.15",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
-  },
-  "homepage": "https://github.com/Ayfri/portal-2d#readme",
-  "keywords": [],
-  "license": "ISC",
-  "main": "index.js",
-  "name": "portal-2d",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ayfri/portal-2d.git"
-  },
-  "scripts": {},
-  "version": "1.0.0"
+	"author": "Ayfri",
+	"bugs": {
+		"url": "https://github.com/Ayfri/portal-2d/issues"
+	},
+	"dependencies": {
+		"pixi.js": "^5.3.7"
+	},
+	"description": "A portal game made in TypeScript using PIXI.",
+	"devDependencies": {
+		"@types/node": "^14.14.21",
+		"@types/pixi.js": "^5.0.0",
+		"esbuild": "^0.8.32",
+		"gulp": "^4.0.2",
+		"gulp-cli": "^2.3.0",
+		"gulp-esbuild": "^0.3.15",
+		"prettier": "^2.2.1",
+		"typescript": "^4.1.3"
+	},
+	"homepage": "https://github.com/Ayfri/portal-2d#readme",
+	"keywords": [],
+	"license": "ISC",
+	"main": "index.js",
+	"name": "portal-2d",
+	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Ayfri/portal-2d.git"
+	},
+	"prettier": {
+		"arrowParens": "avoid",
+		"printWidth": 200,
+		"singleQuote": true,
+		"tabWidth": 4,
+		"useTabs": true
+	},
+	"scripts": {
+		"prettier": "pretier package.json tsconfig.json README.md src --write"
+	},
+	"version": "1.0.0"
 }
