--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"gulp-cli": "^2.3.0",
 		"gulp-esbuild": "^0.3.15",
 		"prettier": "^2.2.1",
+		"serve": "^11.3.2",
 		"typescript": "^4.1.3"
 	},
 	"homepage": "https://github.com/Ayfri/portal-2d#readme",
@@ -36,7 +37,8 @@
 	},
 	"scripts": {
 		"bundle": "gulp bundle",
-		"prettier": "prettier gulpfile.js package.json tsconfig.json README.md src --write"
+		"prettier": "prettier gulpfile.js package.json tsconfig.json README.md src --write",
+		"start": "npm run bundle && serve dist/"
 	},
 	"version": "1.0.0"
 }
