--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"gulp-cli": "^2.3.0",
 		"gulp-esbuild": "^0.3.15",
 		"prettier": "^2.2.1",
+		"reload": "^3.1.1",
 		"serve": "^11.3.2",
 		"typescript": "^4.1.3"
 	},
@@ -39,8 +40,8 @@
 		"bundle": "npm run prettier && gulp bundle",
 		"prettier": "prettier gulpfile.js package.json tsconfig.json README.md src --write",
 		"start": "npm run bundle && npm run serve",
-		"serve": "serve dist/",
-		"watch": "gulp watch"
+		"serve": "reload -b --port 5000 --dir dist",
+		"watch": "npm run bundle && gulp watch"
 	},
 	"version": "1.0.0"
 }
